# Web_Message_Board

./: Cargo.toml  README.md  guestbook.db
src/: main.rs
static/: manifest.json  service-worker.js
uploads/: 13e906c5-ff4c-4738-b8b2-dae7ef6cd59a-¿.m4a  dae8ada0-9801-49bf-912e-a3623b8b6a28-2026年全国高考春季考试数学试卷.docx
